--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-pty": "^0.9.0",
     "socket.io": "^2.3.0",
     "ssh2": "^0.8.9",
     "utf8": "^3.0.0",
